--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "nodejs-hw-01",
   "version": "1.0.0",
-  "description": "",
+  "description": "https://drive.google.com/drive/u/0/folders/1pyxfGqeI6jZnj7yGYisaXCLU--6nJNMU",
   "main": "index.js",
   "scripts": {
     "start": "cross-env  node index.js",
@@ -9,14 +9,14 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/VitaliiKablukov/NodeJs-hw-01.git"
+    "url": "git+https://github.com/VitaliiKablukov/goit-nodejs-hw-01.git"
   },
   "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/VitaliiKablukov/NodeJs-hw-01/issues"
+    "url": "https://github.com/VitaliiKablukov/goit-nodejs-hw-01/issues"
   },
-  "homepage": "https://github.com/VitaliiKablukov/NodeJs-hw-01#readme",
+  "homepage": "https://github.com/VitaliiKablukov/goit-nodejs-hw-01#readme",
   "devDependencies": {
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.20"
@@ -24,5 +24,6 @@
   "dependencies": {
     "commander": "^10.0.0",
     "nanoid": "^4.0.0"
-  }
+  },
+  "keywords": []
 }
